# test_package

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci-tests.yml
src/tests/: test_three_body.py
src/tests.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
